# LIB_CAMK

test_a/: CMakeLists.txt
test_a/libadd/: CMakeLists.txt  add.h
test_a/libmul/: CMakeLists.txt
test_so/: CMakeLists.txt  main.cpp
test_so/libadd/: CMakeLists.txt  add.cpp
test_so/libmul/: CMakeLists.txt  mul.cpp  mul.h
